@@ -30,6 +30,7 @@ Version 0.6.0~dev
 	* Support simple mpeg2 transcode in ffmpeg worker, closes: #5898.
 	* Support mpeg ps muxing in ffmpeg worker.
 	* Support dnxhd codec in ffmpeg worker, closes: #5900.
+	* Support pcm codec in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
